--- a/src/app/carousel-img/carousel-img.component.html
+++ b/src/app/carousel-img/carousel-img.component.html
@@ -1,19 +1,19 @@
+<div id="tester"></div>
 <div class="carousel">
-   <ng-container *ngFor="let slide of slides; let i = index">
-     <img
-       *ngIf="i === currentSlide"
-       [src]="slide.src"
-       class="slide"
-       @carouselAnimation
-       #avatarImg
-       [routerLink]="['/player-profile', avatarImg.src]"
-     />
-
-   </ng-container>
-   <button class="control prev" (click)="onPreviousClick()">
+  <ng-container *ngFor="let slide of slides; let i = index">
+    <img
+      *ngIf="i === currentSlide"
+      [src]="slide.src"
+      class="slide"
+      @carouselAnimation
+      #avatarImg
+      [routerLink]="['/player-profile', avatarImg.src]"
+    />
+  </ng-container>
+  <button class="control prev" (click)="onPreviousClick()">
     <span class="arrow left"></span>
   </button>
   <button class="control next" (click)="onNextClick()">
     <span class="arrow right"></span>
   </button>
-  </div>
+</div>
