--- a/src/app/choose-avatar/choose-avatar.component.html
+++ b/src/app/choose-avatar/choose-avatar.component.html
@@ -2,6 +2,7 @@
 <div class="container">
     <app-carousel-img [slides]="slides" ></app-carousel-img>
  </div>
+ <h1> Click on a robot to select an avatar </h1>
 </html>
 
 
