--- a/src/app/carousel-img/carousel-img.component.css
+++ b/src/app/carousel-img/carousel-img.component.css
@@ -1,36 +1,94 @@
 /* mobile screen */
 
 :host {
-    flex: 1;
-  }
-  
-  .carousel {
-    position: relative;
-    height: 100%;
-    width: 100%;
-    /* overflow: auto; */
-    border-radius: 0.5em;
-  }
-  
-  .slide {
-    position: absolute;
+  flex: 1;
+}
+
+.carousel {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  border-radius: 0.5em;
+}
+
+
+.slide {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  /* position: absolute;
     top: 10vh;
-    left: 0;
-    width: 150px;
-    height: 150px;
-    object-fit: cover;
-    transition: transform 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
-    border-radius: 0.5em;
-  }
-  
-  .slide:hover {
-    transform: scale(1.025);
-  }
+    left: 0; */
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  transition: transform 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
+  border-radius: 0.5em;
+  transition: 0.3s ease-in-out;
+}
+
+.slide:hover {
+  transform: scale(1.025);
+}
+
+.control {
+  border: none;
+  background-color: transparent;
+  outline: 0;
+  position: absolute;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* padding: 0.5em; */
+  color: white;
+  font-weight: bold;
+  font-size: 3em;
+  user-select: none;
+  height: 100%;
+  opacity: 80%;
+  transition: opacity 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
+}
+.control:hover,
+.control:focus {
+  opacity: 1;
+}
+
+.control.next {
+  right: -40%;
+}
+.control.prev {
+  left: -40%;
+}
+
+.arrow {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-left: 0.1em solid #4cc9f0;
+  border-bottom: 0.1em solid #4cc9f0;
+  width: 0.8em;
+  height: 0.8em;
+}
+
+.arrow.left {
+  transform: rotate(45deg);
+  width:0.6em;
+  height:0.6em;
+}
+.arrow.right {
+  transform: rotate(225deg);
+  width:0.6em;
+  height:0.6em;
+}
+
+/* tablet screen */
+@media only screen and (min-width: 768px) {
 
   .control {
     border: none;
     background-color: transparent;
-    outline: 0; 
+    outline: 0;
     position: absolute;
     cursor: pointer;
     display: flex;
@@ -45,130 +103,82 @@
     opacity: 80%;
     transition: opacity 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
   }
-    .control:hover, .control:focus 
-    {
-      opacity: 1;
-    }
-  
-    .control.next {
-      right: -40%;
-    }
-    .control.prev {
-      left: -40%;
-    }
-  
-  
+
+  .control.next {
+    right: -30%;
+  }
+
+  .control.prev {
+    left: 0%;
+  }
+
   .arrow {
     display: flex;
-    align-items: baseline; 
-    border-left: 0.1em solid #4cc9f0;
-    border-bottom: 0.1em solid #4cc9f0;
+    align-items: baseline;
+    border-left: 0.15em solid #4cc9f0;
+    border-bottom: 0.15em solid #4cc9f0;
     width: 0.8em;
     height: 0.8em;
   }
-  
-    .arrow.left {
-      transform: rotate(45deg);
-    }
-    .arrow.right {
-      transform: rotate(225deg);
-    }
-  
 
-    /* tablet screen */
-    @media only screen and (min-width: 768px){
-    .control {
-      border: none;
-      background-color: transparent;
-      outline: 0; 
-      position: absolute;
-      cursor: pointer;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      padding: 0.5em;
-      color: white;
-      font-weight: bold;
-      font-size: 3em;
-      user-select: none;
-      height: 100%;
-      opacity: 80%;
-      transition: opacity 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
-    }   
-      .control.next {
-        right: -30%;
-      }
-      .control.prev {
-        left: 0%;
-      }
-    
-    
-    .arrow {
-      display: flex;
-      align-items: baseline; 
-      border-left: 0.15em solid #4cc9f0;
-      border-bottom: 0.15em solid #4cc9f0;
-      width: 0.8em;
-      height: 0.8em;
-    }
+  .slide {
+    position: absolute;
+    top: 9vh;
+    left: 9vh;
+    width: 220px;
+    height: 220px;
+    object-fit: cover;
+    transition: transform 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
+    border-radius: 0.5em;
+    transition: 0.5s ease-in-out;
+  }
+}
 
-    .slide {
-      position: absolute;
-      top: 9vh;
-      left: 9vh;
-      width: 220px;
-      height: 220px;
-      object-fit: cover;
-      transition: transform 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
-      border-radius: 0.5em;
-    }
+/* desktop */
+@media only screen and (min-width: 1024px) {
+  .control {
+    border: none;
+    background-color: transparent;
+    outline: 0;
+    position: absolute;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0.5em;
+    color: white;
+    font-weight: bold;
+    font-size: 3em;
+    user-select: none;
+    height: 100%;
+    opacity: 80%;
+    transition: opacity 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
+  }
+  .control.next {
+    right: -30%;
+  }
+  .control.prev {
+    left: 0%;
   }
 
-      /* desktop */
-      @media only screen and (min-width:1030px){
-        .control {
-          border: none;
-          background-color: transparent;
-          outline: 0; 
-          position: absolute;
-          cursor: pointer;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          padding: 0.5em;
-          color: white;
-          font-weight: bold;
-          font-size: 3em;
-          user-select: none;
-          height: 100%;
-          opacity: 80%;
-          transition: opacity 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
-        }   
-          .control.next {
-            right: -30%;
-          }
-          .control.prev {
-            left: 0%;
-          }
-        
-        
-        .arrow {
-          display: flex;
-          align-items: baseline; 
-          border-left: 0.2em solid #4cc9f0;
-          border-bottom: 0.2em solid #4cc9f0;
-          width: 0.9em;
-          height: 0.9em;
-        }
-    
-        .slide {
-          position: absolute;
-          top: 8vh;
-          left: 13vh;
-          width: 275px;
-          height: 275px;
-          object-fit: cover;
-          transition: transform 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
-          border-radius: 0.5em;
-        }
-      }
+  .arrow {
+    display: flex;
+    align-items: baseline;
+    border-left: 0.2em solid #4cc9f0;
+    border-bottom: 0.2em solid #4cc9f0;
+    width: 0.9em;
+    height: 0.9em;
+  }
+
+  .slide {
+    position: absolute;
+    top: 8vh;
+    left: 11vh;
+    width: 275px;
+    height: 275px;
+    object-fit: cover;
+    transition: transform 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
+    transition: 0.5s ease-in-out;
+    border-radius: 0.5em;
+  }
+}
