--- a/src/app/game-modes/time-challenge/time-challenge.component.html
+++ b/src/app/game-modes/time-challenge/time-challenge.component.html
@@ -1,4 +1,3 @@
-<!-- <h1>Time Challenge</h1> -->
 <body>
   <section class="blocks">
     <button
@@ -8,7 +7,6 @@
     >
       Start
     </button>
-    <!-- <button id="pausebutton" (click)="pauseButton()">Pause</button> -->
     <button id="resetbutton" (click)="resetButton()">Reset</button>
     <div id="timerbutton">{{ timeLeft }} Seconds</div>
     <div
@@ -17,7 +15,7 @@
     ></div>
   </section>
   <div class="ticker">
-    <h1>SCORE: {{ user_score }}</h1>
+    <h1 id="score">SCORE: {{ user_score }}</h1>
   </div>
 
   <div id="q_cont">
@@ -59,7 +57,6 @@
     <p id="endingParagraph">Don't worry. You can play again!</p>
     <div id="end_button_cont">
       <button class="replay" (click)="resetButton()">Play Again</button>
-      <!-- <p class="clickStart">Press Play Again to restart game.</p> -->
       <button class="clickHome" (click)="homeClick()">Home</button>
     </div>
   </div>
