--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -12,12 +12,12 @@ h1:hover {
 }
 
 .logo {
-  max-width: 50vw;
+  max-width: 20vw;
   display: flex;
 }
 
 img {
-  max-width: 150px;
+  max-width: 30vw;
 }
 
 .login-btn {
@@ -73,8 +73,8 @@ a {
   margin-left: 1em;
 }
 .back-btn:hover {
-  background-color: #38065a98;
-  box-shadow: 3px 3px 8px #39065a;
+  background-color: #39065a;
+  box-shadow: 3px 3px 8px #4cc9f0;
   font-size: 21px;
   transition: 0.3s ease-in-out;
 }
@@ -110,16 +110,12 @@ button {
   flex-direction: column;
   justify-content: flex-end;
   margin-top: 10px;
-  /* width:auto; */
-  /* height:auto; */
-  /* z-index: 100; */
 }
 
 /* Hide the links inside the navigation menu */
 .topnav #myLinks {
   background-color: #4cc9f0;
   color: white;
-  /* margin-top:20px; */
   z-index: 100;
   display: flex;
   flex-direction: column;
@@ -134,7 +130,6 @@ button {
   z-index: 100;
 }
 
-/* Add a background color on mouse-over */
 a.icon:hover {
   background-color: rgba(57, 6, 90, 0.4);
   z-index: 100;
@@ -201,8 +196,9 @@ h3 {
   }
 
   img {
-    max-width: 200px;
-    transition: 0.5s ease-in;
+    max-width: 25vw;
+    transition: 0.5s ease-in-out;
+    margin:auto;
   }
 
   /* Style the hamburger menu */
@@ -231,6 +227,7 @@ h3 {
     margin-top: 2px;
     padding-left: 8px;
   }
+  
 
   /*style for desktop view*/
   @media only screen and (min-width: 1030px) {
@@ -238,7 +235,7 @@ h3 {
       width: 125px;
       height: 65px;
       font-size: 30px;
-      transition: 0.5s ease-in;
+      transition: 0.5s ease-in-out;
     }
     .back-btn:hover {
       background-color: #38065a98;
@@ -247,12 +244,16 @@ h3 {
       transition: 0.3s ease-in-out;
     }
 
-
+    .logo {
+      max-width: 30vw;
+      display: flex;
+    }
+  
     img {
-      max-width: 250px;
+      max-width: 15vw;
+      line-height: 0px;
     }
 
-    /* Style the hamburger menu */
     .topnav a.icon {
       justify-content: center;
       align-items: center;
@@ -260,7 +261,6 @@ h3 {
       font-size: 2.5em;
     }
 
-    /* Style the hamburger menu */
     .topnav a.icon {
       display: block;
       position: absolute;
@@ -276,7 +276,6 @@ h3 {
       height: 60px;
     }
 
-    /* Style the active link (or home/logo) */
     .active {
       color: white;
     }
