--- a/src/app/player-profile/player-profile.component.css
+++ b/src/app/player-profile/player-profile.component.css
@@ -82,7 +82,6 @@ button{
     border-radius: 20px;
     color: #e4fbff;
     font-size: 25px;
-    /* box-shadow: 2px 2px 7px #ea0599; */
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -97,9 +96,6 @@ button{
     flex-direction: column;
     justify-content: center;
     align-items:center;
-    /* background-color: transparent; */
-    /* background: rgb(58,12,163); */
-    /* background: linear-gradient(180deg, rgba(58,12,163,1) 0%, rgba(114,9,183,1) 94%);*/
 } 
 
 
@@ -149,6 +145,13 @@ p.ranking{
         background: linear-gradient(180deg, rgba(58,12,163,1) 0%, rgba(114,9,183,1) 94%);
         padding: 0px;
     }
+
+    .buttonGroup{
+        display:flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items:center;
+    } 
 
     p.ranking{
         margin-left:1.5rem;
@@ -213,5 +216,12 @@ h1{
     font-size: 50px;
 }
     
+
+.buttonGroup{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items:center;
+} 
 
    }
