--- a/src/app/choose-avatar/choose-avatar.component.css
+++ b/src/app/choose-avatar/choose-avatar.component.css
@@ -1,10 +1,11 @@
 .container {
   display: flex;
   justify-content: center;
-  margin-left: 18%;
+  /* margin-left: 18%; */
   height: 40%;
   width: 40%;
   padding: 3em;
+  margin: 0 auto;
 }
 
 html {
