--- a/src/app/player-profile/player-profile.component.css
+++ b/src/app/player-profile/player-profile.component.css
@@ -100,7 +100,7 @@ button{
     /* background-color: transparent; */
     /* background: rgb(58,12,163); */
     /* background: linear-gradient(180deg, rgba(58,12,163,1) 0%, rgba(114,9,183,1) 94%);*/
-} 
+}
 
 
 body {
@@ -153,7 +153,11 @@ p.ranking{
     p.ranking{
         margin-left:1.5rem;
     }
-    
+
+    .buttonGroup {
+      flex-direction: row;
+    }
+
 
       }
 
@@ -212,6 +216,6 @@ h2{
 h1{
     font-size: 50px;
 }
-    
 
-   }
+
+}
