--- a/src/app/game-modes/endless-trivia/endless-trivia.component.css
+++ b/src/app/game-modes/endless-trivia/endless-trivia.component.css
@@ -14,6 +14,12 @@ body {
   right: 0px;
 }
 
+#category {
+  margin: 10px;
+  font-weight: 700;
+  font-style: italic;
+}
+
 img {
   max-height: 42vh;
   max-width: 95vw;
